// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`resolver graph layout when rendering no nodes renders right 1`] = `
Object {
  "edgeLineSegments": Array [],
  "processNodePositions": Map {},
}
`;

exports[`resolver graph layout when rendering one node renders right 1`] = `
Object {
  "edgeLineSegments": Array [],
  "processNodePositions": Map {
    Object {
      "@timestamp": 1582233383000,
      "agent": Object {
        "id": "",
        "type": "",
        "version": "",
      },
      "endgame": Object {
        "event_subtype_full": "creation_event",
        "event_type_full": "process_event",
        "process_name": "",
        "unique_pid": 0,
      },
    } => Array [
      0,
      -0.8164965809277259,
    ],
  },
}
`;

exports[`resolver graph layout when rendering two forks, and one fork has an extra long tine renders right 1`] = `
Object {
  "edgeLineSegments": Array [
    Array [
      Array [
        0,
        -0.8164965809277259,
      ],
      Array [
        190.91883092036784,
        -111.04353500617071,
      ],
    ],
    Array [
      Array [
        0,
        -221.2705734314137,
      ],
      Array [
        381.8376618407357,
        -0.8164965809277259,
      ],
    ],
    Array [
      Array [
        0,
        -221.2705734314137,
      ],
      Array [
        190.91883092036784,
        -331.4976118566567,
      ],
      Object {},
    ],
    Array [
      Array [
        381.8376618407357,
        -0.8164965809277259,
      ],
      Array [
        572.7564927611036,
        -111.04353500617071,
      ],
      Object {},
    ],
    Array [
      Array [
        190.91883092036784,
        -331.4976118566567,
      ],
      Array [
        381.83766184073573,
        -441.7246502818997,
      ],
    ],
    Array [
      Array [
        286.3782463805518,
        -496.8381694945212,
      ],
      Array [
        477.2970773009197,
        -386.6111310692782,
      ],
    ],
    Array [
      Array [
        286.3782463805518,
        -496.8381694945212,
      ],
      Array [
        477.29707730091957,
        -607.0652079197642,
      ],
      Object {},
    ],
    Array [
      Array [
        477.2970773009197,
        -386.6111310692782,
      ],
      Array [
        668.2159082212875,
        -496.8381694945212,
      ],
      Object {},
    ],
    Array [
      Array [
        572.7564927611036,
        -111.04353500617071,
      ],
      Array [
        763.6753236814714,
        -221.2705734314137,
      ],
    ],
    Array [
      Array [
        668.2159082212875,
        -276.3840926440352,
      ],
      Array [
        859.1347391416554,
        -166.1570542187922,
      ],
    ],
    Array [
      Array [
        668.2159082212875,
        -276.3840926440352,
      ],
      Array [
        859.1347391416552,
        -386.6111310692782,
      ],
      Object {},
    ],
    Array [
      Array [
        859.1347391416554,
        -166.1570542187922,
      ],
      Array [
        1050.053570062023,
        -276.3840926440352,
      ],
      Object {},
    ],
    Array [
      Array [
        1050.053570062023,
        -276.3840926440352,
      ],
      Array [
        1240.972400982391,
        -386.6111310692782,
      ],
      Object {},
    ],
  ],
  "processNodePositions": Map {
    Object {
      "@timestamp": 1582233383000,
      "agent": Object {
        "id": "",
        "type": "",
        "version": "",
      },
      "endgame": Object {
        "event_subtype_full": "creation_event",
        "event_type_full": "process_event",
        "process_name": "",
        "unique_pid": 0,
      },
    } => Array [
      0,
      -0.8164965809277259,
    ],
    Object {
      "@timestamp": 1582233383000,
      "agent": Object {
        "id": "",
        "type": "",
        "version": "",
      },
      "endgame": Object {
        "event_subtype_full": "already_running",
        "event_type_full": "process_event",
        "unique_pid": 1,
        "unique_ppid": 0,
      },
    } => Array [
      190.91883092036784,
      -331.4976118566567,
    ],
    Object {
      "@timestamp": 1582233383000,
      "agent": Object {
        "id": "",
        "type": "",
        "version": "",
      },
      "endgame": Object {
        "event_subtype_full": "creation_event",
        "event_type_full": "process_event",
        "unique_pid": 2,
        "unique_ppid": 0,
      },
    } => Array [
      572.7564927611036,
      -111.04353500617071,
    ],
    Object {
      "@timestamp": 1582233383000,
      "agent": Object {
        "id": "",
        "type": "",
        "version": "",
      },
      "endgame": Object {
        "event_subtype_full": "creation_event",
        "event_type_full": "process_event",
        "unique_pid": 3,
        "unique_ppid": 1,
      },
    } => Array [
      477.29707730091957,
      -607.0652079197642,
    ],
    Object {
      "@timestamp": 1582233383000,
      "agent": Object {
        "id": "",
        "type": "",
        "version": "",
      },
      "endgame": Object {
        "event_subtype_full": "creation_event",
        "event_type_full": "process_event",
        "unique_pid": 4,
        "unique_ppid": 1,
      },
    } => Array [
      668.2159082212875,
      -496.8381694945212,
    ],
    Object {
      "@timestamp": 1582233383000,
      "agent": Object {
        "id": "",
        "type": "",
        "version": "",
      },
      "endgame": Object {
        "event_subtype_full": "creation_event",
        "event_type_full": "process_event",
        "unique_pid": 5,
        "unique_ppid": 2,
      },
    } => Array [
      859.1347391416552,
      -386.6111310692782,
    ],
    Object {
      "@timestamp": 1582233383000,
      "agent": Object {
        "id": "",
        "type": "",
        "version": "",
      },
      "endgame": Object {
        "event_subtype_full": "creation_event",
        "event_type_full": "process_event",
        "unique_pid": 6,
        "unique_ppid": 2,
      },
    } => Array [
      1050.053570062023,
      -276.3840926440352,
    ],
    Object {
      "@timestamp": 1582233383000,
      "agent": Object {
        "id": "",
        "type": "",
        "version": "",
      },
      "endgame": Object {
        "event_subtype_full": "creation_event",
        "event_type_full": "process_event",
        "unique_pid": 7,
        "unique_ppid": 6,
      },
    } => Array [
      1240.972400982391,
      -386.6111310692782,
    ],
  },
}
`;

exports[`resolver graph layout when rendering two nodes, one being the parent of the other renders right 1`] = `
Object {
  "edgeLineSegments": Array [
    Array [
      Array [
        0,
        -0.8164965809277259,
      ],
      Array [
        190.91883092036784,
        -111.04353500617071,
      ],
      Object {},
    ],
  ],
  "processNodePositions": Map {
    Object {
      "@timestamp": 1582233383000,
      "agent": Object {
        "id": "",
        "type": "",
        "version": "",
      },
      "endgame": Object {
        "event_subtype_full": "creation_event",
        "event_type_full": "process_event",
        "process_name": "",
        "unique_pid": 0,
      },
    } => Array [
      0,
      -0.8164965809277259,
    ],
    Object {
      "@timestamp": 1582233383000,
      "agent": Object {
        "id": "",
        "type": "",
        "version": "",
      },
      "endgame": Object {
        "event_subtype_full": "already_running",
        "event_type_full": "process_event",
        "unique_pid": 1,
        "unique_ppid": 0,
      },
    } => Array [
      190.91883092036784,
      -111.04353500617071,
    ],
  },
}
`;
